# interoperable_land_water_models

./: .gitignore  README.md
ApsimIOM/ApsimHandler/: GeneralWorkFlow.txt
ApsimIOM/ApsimHandler/ApsimSoilUtilities/: ApsimSoilUtilities.sln
ApsimIOM/Config/: ApsimHandlerConfig.yaml  ApsimSimulationSettings.yaml
ApsimIOM/SoilData/: Aparima_SMap_SoilwatLibrary.soils
ApsimIOM/WeatherData/: weatherData(-45.625_167.625).met
Components/: README.md
Components/Aggregator/data/: InputsOnly.db  WeightedAverage.db  WeightsOnly.db
Components/Aggregator/src/: AggregatorConfiguration.cpp
Components/ApsimIOM/: README.md
Components/ApsimIOM/Config/: README.md  base.apsimx
Components/ApsimIOM/SoilData/: README.md
Components/ApsimIOM/WeatherData/: MidAparimaLocation.met  README.md
Components/DeltaShellDynamic/: README.md
Components/DeltaShellDynamic/Seq3-DHM/: DimrConfig.gw.xml  DimrConfig.luci.sma.xml  DimrConfig.sma.route.gw.xml  DimrConfig.sma.route.xml  DimrConfig.toproute.xml  aparima_GW.yaml  map-select.py
Components/DeltaShellSteadyState/: README.md
Components/DeltaShellSteadyState/Seq1-SSM/: Ecotope.Nutrient.00.LU.yaml  ReadMe.md  Seq1.py  lookup-aggregator.yaml  lookup-aggregatorDimrConfig.xml  lookup-iterator.yaml  run_dimr.bat
Components/DeltaShellSteadyState/Seq2-SSM/: AparimaDimrConfig.xml  AparimaWGWDimrConfig.xml  ReadMe.md  SparrowConfig.yaml  agg2segment.yaml  aparima_GW.yaml  databases_starting.7z  lookup-RevisedTypology-iterator.yaml  lookup-aggregator.yaml  lookup-aggregatorDimrConfig.xml  lookupDimrConfig.xml  typologies-revised.yaml
Components/GroundwaterBMI/GroundwaterBMI/: GroundwaterBMI.cpp  GroundwaterBMI.vcxproj  GroundwaterBMI.vcxproj.filters  Makefile
Components/GroundwaterBMI/misc/: aparima.yaml
Components/LUCI_rainfall-runoff/: .gitignore  Rainfall runoff manual calcs.xlsx  config.yaml  create-netCDF.py  create_input_netCDF_file.py  create_netCDF_output_template.py  create_sample_input_netCDF.py  find_max_value.py  matlab_AE.csv  matlab_AE2.csv  matlab_modflow.csv  matlab_modflow2.csv  matlab_overland_flow.csv  matlab_overland_flow2.csv  overview.txt  rainfall_runoff.py  readme.md  wrapper.py
Components/LUCI_rainfall-runoff/bmi/: .gitignore  README.md
Components/SOSDeltaShellPlugin/DeltaShell.Plugins.SosService/: SosServiceApplicationPlugin.cs
Components/SOSWebService/: README.md  SOSClientJSON.sln
Components/SOSWebService/SOSClientApp/: SOSClientApp.csproj
Components/SOSWebService/SOSClientJSON/: SOSClientJSON.csproj
Components/SparrowRouter/: README.md
Components/SparrowRouter/Model/: Sparrow.db  SparrowRouter.py
Components/TopNetOutputDeltaShellPlugin/: README.md  SosService.sln
Components/TopNetStreamRouting/: Readme.docx  RivSpatail.txt  Route1Step.f90  Route1Step_nonc.f90  init_basin.f90  laketype.f90  lakevars.f90  nrtype.f90  nrutil.f90  reachorder.f90  reachtype.f90  reachvars.f90  required_netcdf_vars.txt  rstart_get.f90  rstart_get_nonc.f90  spldat_get.f90  spldat_get_nonc.f90
Examples/: Development of map Display in Deltares.docx  VolumeModel2.sln  VolumeModelScript.py
Examples/Aparima/: Aparima_catchments.dbf  Aparima_catchments.shp.xml  Aparima_catchments.shx  Project1.dsproj
Examples/BMI/: README.md
Examples/BMI/HelloDimr/: CMakeLists.txt  README.md
Examples/BMI/HelloDimr/ArrayBuilder/: CMakeLists.txt
Examples/BMI/HelloDimr/ArrayEcho/: ArrayEcho.cpp  CMakeLists.txt  EchoYamlParser.cpp  EchoYamlParser.h
Examples/BMI/HelloDimr/builds/win64/: build_msvc.bat  clear_msvc.bat  install_msvc.bat
Examples/BMI/HelloDimr/dimr_runner/: arrayBuilderDimrConfig.xml  arrayData.yaml  arrayEchoDimrConfig.xml  buildEchoDimrConfig.xml  builder_config.yaml  echo_config.yaml  run_dimr.bat
Examples/BMI/HelloDimr/lib/: yaml.lib
Examples/BMI/HelloDimr/src/: CMakeLists.txt
Examples/BMI/HelloDimr/src/ArrayBuilder/: ArrayBuilder.cpp  BuilderYamlUtils.cpp  BuilderYamlUtils.h  CMakeLists.txt  stdafx.h
Examples/BMI/HelloDimr/src/ArrayEcho/: CMakeLists.txt  stdafx.h
Examples/BMI/Iterator/: .gitignore  CMakeLists.txt  README.md
Examples/BMI/Iterator/builds/win64/: build.bat  build_msvc.bat  settings.bat
Examples/BMI/Iterator/examples/: typology-lookup-csv.yml
Examples/BMI/Iterator/src/bmi/: CMakeLists.txt  bmi_iterator.cpp  bmi_iterator.cpp.rej  bmi_iterator.h  bmi_iterator_BACKUP_21968.cpp  bmi_iterator_REMOTE_21968.cpp  bmi_iterator_tests.cpp  runner.cpp
Examples/BMI/Iterator/src/lib/: CMakeLists.txt  bmit.cpp  bmit.h  bmit_tests.cpp  table.cpp  table.h  table_tests.cpp  target.cpp  target.h
Examples/BMI/Iterator/src/lib/os/: CMakeLists.txt  os.h  os_win.cpp
Examples/BMI/Iterator/test/: target_settings.h
Examples/BMI/Iterator/test/data/: input_a.csv  input_b.csv  output.csv
Examples/BMI/Lookup/: .gitignore  CMakeLists.txt  README.md
Examples/BMI/Lookup/builds/win64/: build.bat  build.sh  build_msvc.bat  clear.sh  clear_msvc.bat  toolchain.cmake
Examples/BMI/Lookup/data/: lookup.yml  typologies.yaml  typologies.yaml.bak  typologies.yml
Examples/BMI/Lookup/src/bmi/: CMakeLists.txt  bmi_lookup.cpp  bmi_lookup.h  bmi_lookup_tests.cpp
Examples/BMI/Lookup/src/catch/: CMakeLists.txt
Examples/BMI/Lookup/src/lib/: CMakeLists.txt  lookup.cpp  lookup.h  lookup_tests.cpp
Examples/BMI/TypologyLookup/src/: CMakeLists.txt
Examples/BMI/TypologyLookup/src/typo_app/: CMakeLists.txt  main.cpp
Examples/BMI/TypologyLookup/src/typo_bmi_app/: CMakeLists.txt  main.cpp
Examples/BMI/TypologyLookup/src/typo_bmi_lib/: CMakeLists.txt  bmi_typo.cpp  bmi_typo.h
Examples/BMI/TypologyLookup/src/typo_lib/: CMakeLists.txt  typo.cpp  typo.h
Examples/DeltaShell/: README.md
Examples/DeltaShell.Plugins.Toolbox/: DeltaShell.Plugins.Toolbox.XML  DeltaShell.Plugins.Toolbox.dll.config
Examples/DeltaShellPlugins.VolumeModel/: DeltaShellPlugins.VolumeModel.csproj
SteadyState/: README.md
SteadyState/Aggregator/: README.md
SteadyState/GroundwaterBMI/: GroundwaterBMI.sln  README.md
SteadyState/SparrowRouter/: README.md
Test/: Readme.md  bmi-runner.py
Utilites/: Readme.md
Utilites/Python/: Readme.md
(+400 files in other folders)
